--- a/index.html
+++ b/index.html
@@ -432,9 +432,11 @@
       </div>
     </header>
 
-    <!-- Hero -->
+    <!-- Main  -->
 
     <main>
+      <!-- Hero -->
+
       <section class="hero">
         <div class="hero__background-img"></div>
 
@@ -872,9 +874,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -890,9 +890,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -908,9 +906,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -926,9 +922,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -944,9 +938,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -962,9 +954,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -980,9 +970,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -998,9 +986,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -1014,9 +1000,7 @@
                     <p>
                       Customizable dedicated servers located at a Tier III data
                       center in Kyiv, Ukraine, with outstanding connectivity to
-                      Asia and the Middle East. 24/7 professional technical
-                      support, unmetered bandwidth, SLA guarantee, and flawless
-                      company reputation over a decade.
+                      Asia and the Middle East.
                     </p></a
                   >
                 </li>
@@ -1119,6 +1103,51 @@
         </div>
       </section>
 
+      <!-- Why Vsys host,  -->
+
+      <section class="availability">
+        <div class="container">
+          <h2 class="section-title section-title--gradient">Why vsys host?</h2>
+
+          <div class="availability-section">
+            <!-- <svg width="200px" heigth="163px">
+              <use
+                class="availability-section__svg"
+                href="./images/why-vsys-host__section.svg"
+              ></use>
+            </svg> -->
+            <img
+              src="./images/why-vsys-host__section.svg"
+              alt="Availability section illustration"
+            />
+            <div class="availability-section__info">
+              <h3 class="section-subtitle">
+                EASY TO MAKE AN ORDER WITHOUT KYC, JUST 3 simple steps:
+              </h3>
+              <ul class="availability-section__list">
+                <li>
+                  <h4 class="availability-section__subtitle">STEP 1</h4 class="">
+                  <p>
+                    VSYS Host owns its server hardware and network equipment.
+                  </p>
+                </li>
+                <li>
+                  <h4 class="availability-section__subtitle">STEP 2</h4 class="">
+                  <p>
+                    VSYS Host owns its server hardware and network equipment.
+                  </p>
+                </li>
+                <li>
+                  <h4 class="availability-section__subtitle">STEP 3</h4 class="">
+                  <p>
+                    VSYS Host owns its server hardware and network equipment.
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- Faq  -->
 
       <section class="faq">
@@ -1350,25 +1379,45 @@
         <div class="footer-info">
           <ul class="footer-social__list">
             <li>
-              <a href="#"><img src="./images/github-icon.svg" alt="" /></a>
+              <a class="footer-social__link" href="#"
+                ><svg class="footer-social__svg" width="24px" height="24px">
+                  <use
+                    class="footer-social__svg--color"
+                    href="./images/sprite.svg#github-icon"
+                  ></use></svg
+              ></a>
             </li>
             <li>
-              <a href="#"><img src="./images/linkedin-icon.svg" alt="" /></a>
+              <a class="footer-social__link" href="#"
+                ><svg class="footer-social__svg" width="24px" height="24px">
+                  <use
+                    class="footer-social__svg--color"
+                    href="./images/sprite.svg#linkedin-icon"
+                  ></use></svg
+              ></a>
             </li>
             <li>
-              <a href="#"><img src="./images/facebook-icon.svg" alt="" /></a>
+              <a class="footer-social__link" href="#"
+                ><svg class="footer-social__svg" width="16px" height="28px">
+                  <use
+                    class="footer-social__svg--color"
+                    href="./images/sprite.svg#facebook-icon"
+                  ></use></svg
+              ></a>
             </li>
             <li>
-              <a href="#"><img src="./images/twitter-icon.svg" alt="" /></a>
+              <a class="footer-social__link" href="#"
+                ><svg class="footer-social__svg" width="28px" height="23px">
+                  <use
+                    class="footer-social__svg--color"
+                    href="./images/sprite.svg#twitter-icon"
+                  ></use></svg
+              ></a>
             </li>
           </ul>
 
           <ul class="footer-payment">
-            <h3
-              class="section-subtitle footer__subtitle footer-payment__subtitle"
-            >
-              Payment system
-            </h3>
+            <h3 class="section-subtitle footer__subtitle">Payment system</h3>
             <li class="footer-payment__item">
               <a class="footer-payment__link" href="#"
                 ><img
