--- a/index.html
+++ b/index.html
@@ -1103,13 +1103,13 @@
         </div>
       </section>
 
-      <!-- Why Vsys host,  -->
+      <!-- Why Vsys host?  -->
 
       <section class="availability">
         <div class="container">
           <h2 class="section-title section-title--gradient">Why vsys host?</h2>
 
-          <div class="availability-section">
+          <div class="availability__section">
             <!-- <svg width="200px" heigth="163px">
               <use
                 class="availability-section__svg"
@@ -1117,28 +1117,29 @@
               ></use>
             </svg> -->
             <img
+              class="availability__img"
               src="./images/why-vsys-host__section.svg"
               alt="Availability section illustration"
             />
-            <div class="availability-section__info">
+            <div class="availability__info">
               <h3 class="section-subtitle">
                 EASY TO MAKE AN ORDER WITHOUT KYC, JUST 3 simple steps:
               </h3>
-              <ul class="availability-section__list">
+              <ul class="availability__list">
                 <li>
-                  <h4 class="availability-section__subtitle">STEP 1</h4 class="">
+                  <h4 class="availability__subtitle">STEP 1</h4>
                   <p>
                     VSYS Host owns its server hardware and network equipment.
                   </p>
                 </li>
                 <li>
-                  <h4 class="availability-section__subtitle">STEP 2</h4 class="">
+                  <h4 class="availability__subtitle">STEP 2</h4>
                   <p>
                     VSYS Host owns its server hardware and network equipment.
                   </p>
                 </li>
                 <li>
-                  <h4 class="availability-section__subtitle">STEP 3</h4 class="">
+                  <h4 class="availability__subtitle">STEP 3</h4>
                   <p>
                     VSYS Host owns its server hardware and network equipment.
                   </p>
@@ -1148,6 +1149,130 @@
           </div>
         </div>
       </section>
+
+      <!-- Advantages  -->
+
+      <section class="advantages">
+        <div class="container">
+          <ul class="advantages__list">
+            <li class="advantages__item">
+              <svg class="advantages__image">
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_1"
+                ></use>
+              </svg>
+              <h3 class="section-subtitle advantages__subtitle">
+                FAIRLY PRICED
+              </h3>
+              <p class="advantages__description">
+                VSYS Host owns its server hardware and network equipment;
+                therefore, there is no reseller markup, allowing for attractive
+                costs for the consumer. We are pleased to provide competitively
+                priced bandwidth thanks to a unique ideal balance between
+                incoming traffic from local customers and outgoing traffic to
+                international customers.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <svg class="advantages__image">
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_1"
+                ></use>
+              </svg>
+              <h3 class="section-subtitle advantages__subtitle">
+                FAIRLY PRICED
+              </h3>
+              <p class="advantages__description">
+                VSYS Host owns its server hardware and network equipment;
+                therefore, there is no reseller markup, allowing for attractive
+                costs for the consumer. We are pleased to provide competitively
+                priced bandwidth thanks to a unique ideal balance between
+                incoming traffic from local customers and outgoing traffic to
+                international customers.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <svg class="advantages__image">
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_1"
+                ></use>
+              </svg>
+              <h3 class="section-subtitle advantages__subtitle">
+                FAIRLY PRICED
+              </h3>
+              <p class="advantages__description">
+                VSYS Host owns its server hardware and network equipment;
+                therefore, there is no reseller markup, allowing for attractive
+                costs for the consumer. We are pleased to provide competitively
+                priced bandwidth thanks to a unique ideal balance between
+                incoming traffic from local customers and outgoing traffic to
+                international customers.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <svg class="advantages__image">
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_1"
+                ></use>
+              </svg>
+              <h3 class="section-subtitle advantages__subtitle">
+                FAIRLY PRICED
+              </h3>
+              <p class="advantages__description">
+                VSYS Host owns its server hardware and network equipment;
+                therefore, there is no reseller markup, allowing for attractive
+                costs for the consumer. We are pleased to provide competitively
+                priced bandwidth thanks to a unique ideal balance between
+                incoming traffic from local customers and outgoing traffic to
+                international customers.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <svg class="advantages__image">
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_1"
+                ></use>
+              </svg>
+              <h3 class="section-subtitle advantages__subtitle">
+                FAIRLY PRICED
+              </h3>
+              <p class="advantages__description">
+                VSYS Host owns its server hardware and network equipment;
+                therefore, there is no reseller markup, allowing for attractive
+                costs for the consumer. We are pleased to provide competitively
+                priced bandwidth thanks to a unique ideal balance between
+                incoming traffic from local customers and outgoing traffic to
+                international customers.
+              </p>
+            </li>
+            <li class="advantages__item">
+              <svg class="advantages__image">
+                <use
+                  class="advantages__svg"
+                  href="./images/sprite.svg#advantages-image_1"
+                ></use>
+              </svg>
+              <h3 class="section-subtitle advantages__subtitle">
+                FAIRLY PRICED
+              </h3>
+              <p class="advantages__description">
+                VSYS Host owns its server hardware and network equipment;
+                therefore, there is no reseller markup, allowing for attractive
+                costs for the consumer. We are pleased to provide competitively
+                priced bandwidth thanks to a unique ideal balance between
+                incoming traffic from local customers and outgoing traffic to
+                international customers.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+
       <!-- Faq  -->
 
       <section class="faq">
