--- a/index.html
+++ b/index.html
@@ -1103,43 +1103,55 @@
         </div>
       </section>
 
-      <!-- Why Vsys host?  -->
+      <!-- Advantages  -->
 
-      <section class="availability">
+      <section class="advantages">
         <div class="container">
           <h2 class="section-title section-title--gradient">Why vsys host?</h2>
 
-          <div class="availability__section">
+          <div class="advantages-steps">
             <!-- <svg width="200px" heigth="163px">
               <use
-                class="availability-section__svg"
+                class="advantages-steps-section__svg"
                 href="./images/why-vsys-host__section.svg"
               ></use>
             </svg> -->
-            <img
-              class="availability__img"
+            <!-- <img
+              class="advantages-steps__img"
               src="./images/why-vsys-host__section.svg"
-              alt="Availability section illustration"
-            />
-            <div class="availability__info">
+              alt="advantages-steps section illustration"
+            /> -->
+            <div>
               <h3 class="section-subtitle">
                 EASY TO MAKE AN ORDER WITHOUT KYC, JUST 3 simple steps:
               </h3>
-              <ul class="availability__list">
-                <li>
-                  <h4 class="availability__subtitle">STEP 1</h4>
+              <ul class="advantages-steps__list">
+                <li class="advantages-steps__item">
+                  <h4
+                    class="section-subtitle section-subtitle--blue advantages__subtitle"
+                  >
+                    STEP 1
+                  </h4>
                   <p>
                     VSYS Host owns its server hardware and network equipment.
                   </p>
                 </li>
-                <li>
-                  <h4 class="availability__subtitle">STEP 2</h4>
+                <li class="advantages-steps__item">
+                  <h4
+                    class="section-subtitle section-subtitle--blue advantages__subtitle"
+                  >
+                    STEP 2
+                  </h4>
                   <p>
                     VSYS Host owns its server hardware and network equipment.
                   </p>
                 </li>
-                <li>
-                  <h4 class="availability__subtitle">STEP 3</h4>
+                <li class="advantages-steps__item">
+                  <h4
+                    class="section-subtitle section-subtitle--blue advantages__subtitle"
+                  >
+                    STEP 3
+                  </h4>
                   <p>
                     VSYS Host owns its server hardware and network equipment.
                   </p>
@@ -1147,16 +1159,10 @@
               </ul>
             </div>
           </div>
-        </div>
-      </section>
 
-      <!-- Advantages  -->
-
-      <section class="advantages">
-        <div class="container">
           <ul class="advantages__list">
             <li class="advantages__item">
-              <svg class="advantages__image">
+              <svg class="advantages__image" width="90px" height="90px">
                 <use
                   class="advantages__svg"
                   href="./images/sprite.svg#advantages-image_1"
@@ -1165,7 +1171,7 @@
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
               </h3>
-              <p class="advantages__description">
+              <p>
                 VSYS Host owns its server hardware and network equipment;
                 therefore, there is no reseller markup, allowing for attractive
                 costs for the consumer. We are pleased to provide competitively
@@ -1175,16 +1181,16 @@
               </p>
             </li>
             <li class="advantages__item">
-              <svg class="advantages__image">
+              <svg class="advantages__image" width="90px" height="90px">
                 <use
                   class="advantages__svg"
-                  href="./images/sprite.svg#advantages-image_1"
+                  href="./images/sprite.svg#advantages-image_2"
                 ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
               </h3>
-              <p class="advantages__description">
+              <p>
                 VSYS Host owns its server hardware and network equipment;
                 therefore, there is no reseller markup, allowing for attractive
                 costs for the consumer. We are pleased to provide competitively
@@ -1194,16 +1200,16 @@
               </p>
             </li>
             <li class="advantages__item">
-              <svg class="advantages__image">
+              <svg class="advantages__image" width="90px" height="90px">
                 <use
                   class="advantages__svg"
-                  href="./images/sprite.svg#advantages-image_1"
+                  href="./images/sprite.svg#advantages-image_3"
                 ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
               </h3>
-              <p class="advantages__description">
+              <p>
                 VSYS Host owns its server hardware and network equipment;
                 therefore, there is no reseller markup, allowing for attractive
                 costs for the consumer. We are pleased to provide competitively
@@ -1213,16 +1219,16 @@
               </p>
             </li>
             <li class="advantages__item">
-              <svg class="advantages__image">
+              <svg class="advantages__image" width="90px" height="90px">
                 <use
                   class="advantages__svg"
-                  href="./images/sprite.svg#advantages-image_1"
+                  href="./images/sprite.svg#advantages-image_4"
                 ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
               </h3>
-              <p class="advantages__description">
+              <p>
                 VSYS Host owns its server hardware and network equipment;
                 therefore, there is no reseller markup, allowing for attractive
                 costs for the consumer. We are pleased to provide competitively
@@ -1232,16 +1238,16 @@
               </p>
             </li>
             <li class="advantages__item">
-              <svg class="advantages__image">
+              <svg class="advantages__image" width="90px" height="90px">
                 <use
                   class="advantages__svg"
-                  href="./images/sprite.svg#advantages-image_1"
+                  href="./images/sprite.svg#advantages-image_5"
                 ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
               </h3>
-              <p class="advantages__description">
+              <p>
                 VSYS Host owns its server hardware and network equipment;
                 therefore, there is no reseller markup, allowing for attractive
                 costs for the consumer. We are pleased to provide competitively
@@ -1251,16 +1257,16 @@
               </p>
             </li>
             <li class="advantages__item">
-              <svg class="advantages__image">
+              <svg class="advantages__image" width="90px" height="90px">
                 <use
                   class="advantages__svg"
-                  href="./images/sprite.svg#advantages-image_1"
+                  href="./images/sprite.svg#advantages-image_6"
                 ></use>
               </svg>
               <h3 class="section-subtitle advantages__subtitle">
                 FAIRLY PRICED
               </h3>
-              <p class="advantages__description">
+              <p>
                 VSYS Host owns its server hardware and network equipment;
                 therefore, there is no reseller markup, allowing for attractive
                 costs for the consumer. We are pleased to provide competitively
@@ -1270,6 +1276,263 @@
               </p>
             </li>
           </ul>
+        </div>
+      </section>
+
+      <!-- Have questions?  -->
+
+      <section class="contact">
+        <div class="contact__background-img"></div>
+        <div class="container contact__container">
+          <div>
+            <h2 class="section-title section-title--white">Have questions?</h2>
+            <p class="contact__call">Contact us for answers!</p>
+          </div>
+
+          <a class="button button--transparent" href="#"
+            >CONTACT US HERE AND NOW</a
+          >
+        </div>
+      </section>
+
+      <!-- Vision, mission, and values of the VSYS HOST -->
+
+      <section class="values">
+        <div class="container">
+          <h2 class="section-title section-title--gradient">
+            Vision, mission, and values of the VSYS HOST
+          </h2>
+          <p class="values__description">
+            VSYS Host owns its server hardware and network equipment; therefore,
+            there is no reseller markup, allowing for attractive costs for the
+            consumer. We are pleased to provide competitively priced bandwidth
+            thanks to a unique ideal balance between incoming traffic from local
+            customers and outgoing traffic to international customers.
+          </p>
+
+          <h3 class="section-subtitle section-subtitle--blue">Values</h3>
+          <ul class="values__list">
+            <li class="values__item">
+              <img
+                class="values__svg"
+                src="./images/value-illustration_1.svg"
+                alt="Value illustration"
+              />
+              <h4 class="section-subtitle values__text">
+                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
+              </h4>
+            </li>
+            <li class="values__item">
+              <img
+                class="values__svg"
+                src="./images/value-illustration_2.svg"
+                alt="Value illustration"
+              />
+              <h4 class="section-subtitle values__text">
+                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
+              </h4>
+            </li>
+            <li class="values__item">
+              <img
+                class="values__svg"
+                src="./images/value-illustration_3.svg"
+                alt="Value illustration"
+              />
+              <h4 class="section-subtitle values__text">
+                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
+              </h4>
+            </li>
+            <li class="values__item">
+              <img
+                class="values__svg"
+                src="./images/value-illustration_4.svg"
+                alt="Value illustration"
+              />
+              <h4 class="section-subtitle values__text">
+                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
+              </h4>
+            </li>
+            <li class="values__item">
+              <img
+                class="values__svg"
+                src="./images/value-illustration_5.svg"
+                alt="Value illustration"
+              />
+              <h4 class="section-subtitle values__text">
+                CUSTOMIZATION OF EQUIPMENT BY YOUR REQUESTS
+              </h4>
+            </li>
+          </ul>
+
+          <div class="values__box">
+            <div>
+              <h3 class="section-subtitle section-subtitle--blue">Vision</h3>
+              <p>
+                We are pleased to provide competitively priced bandwidth thanks
+                to a unique ideal balance between incoming traffic from local
+                customers and outgoing traffic to international customers.
+              </p>
+            </div>
+
+            <div>
+              <h3 class="section-subtitle section-subtitle--blue">Mission</h3>
+              <p>
+                We are pleased to provide competitively priced bandwidth thanks
+                to a unique ideal balance between incoming traffic from local
+                customers and outgoing traffic to international customers.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Payment methods -->
+
+      <section class="payment">
+        <div class="container">
+          <h2 class="section-title section-title--white">Payment methods</h2>
+          <ul class="payment__list">
+            <li class="payment__item">
+              <svg width="100px" height="74px" class="payment__img">
+                <use
+                  class="payment__svg"
+                  href="./images/sprite.svg#payment-mastercard"
+                ></use>
+              </svg>
+            </li>
+            <li class="payment__item">
+              <svg width="100px" height="74px" class="payment__img">
+                <use
+                  class="payment__svg"
+                  href="./images/sprite.svg#payment-mastercard"
+                ></use>
+              </svg>
+            </li>
+            <li class="payment__item">
+              <svg width="100px" height="74px" class="payment__img">
+                <use
+                  class="payment__svg"
+                  href="./images/sprite.svg#payment-mastercard"
+                ></use>
+              </svg>
+            </li>
+            <li class="payment__item">
+              <svg width="100px" height="74px" class="payment__img">
+                <use
+                  class="payment__svg"
+                  href="./images/sprite.svg#payment-mastercard"
+                ></use>
+              </svg>
+            </li>
+            <li class="payment__item">
+              <svg width="100px" height="74px" class="payment__img">
+                <use
+                  class="payment__svg"
+                  href="./images/sprite.svg#payment-mastercard"
+                ></use>
+              </svg>
+            </li>
+            <li class="payment__item">
+              <svg width="100px" height="74px" class="payment__img">
+                <use
+                  class="payment__svg"
+                  href="./images/sprite.svg#payment-mastercard"
+                ></use>
+              </svg>
+            </li>
+            <li class="payment__item">
+              <svg width="100px" height="74px" class="payment__img">
+                <use
+                  class="payment__svg"
+                  href="./images/sprite.svg#payment-mastercard"
+                ></use>
+              </svg>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Customer reviews  -->
+
+      <section class="reviews">
+        <div class="container">
+          <h2 class="section-title section-title--gradient">
+            VSYS CUSTOMERS REVIEWS
+          </h2>
+
+          <ul class="reviews__list">
+            <li class="reviews__item">
+              <a class="reviews__link" href="#"
+                ><img
+                  class="reviews__logo"
+                  src="./images/hostadvice-logo-png.png"
+                  alt="Hostadvice logo"
+                />
+                <svg class="reviews__svg--box" width="92px" height="19px">
+                  <use
+                    class="reviews__svg"
+                    href="./images/sprite.svg#5-stars"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="reviews__item">
+              <a class="reviews__link" href="#"
+                ><img
+                  class="reviews__logo"
+                  src="./images/trustpilot-logo-svg.svg"
+                  alt="Trustpilot logo" />
+                <svg class="reviews__svg--box" width="92px" height="19px">
+                  <use href="./images/sprite.svg#5-stars"></use></svg
+              ></a>
+            </li>
+            <li class="reviews__item">
+              <a class="reviews__link" href="#"
+                ><img
+                  class="reviews__logo"
+                  src="./images/google-my-business-logo-svg.svg"
+                  alt="Google my business logo" />
+                <svg class="reviews__svg--box" width="92px" height="19px">
+                  <use href="./images/sprite.svg#4-stars"></use></svg
+              ></a>
+            </li>
+            <li class="reviews__item">
+              <a class="reviews__link" href="#"
+                ><img
+                  class="reviews__logo"
+                  src="./images/website-planet-logo-png.png"
+                  alt="Website planet logo" />
+                <svg class="reviews__svg--box" width="92px" height="19px">
+                  <use href="./images/sprite.svg#4-stars"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- Latest news(blog articles) -->
+
+      <section class="articles">
+        <div class="container">
+          <h2 class="section-title section-title--gradient">
+            VSYS HOST LATEST NEWS
+          </h2>
+        </div>
+      </section>
+
+      <!-- Have questions?  -->
+
+      <section class="contact">
+        <div class="contact__background-img"></div>
+        <div class="container contact__container">
+          <div>
+            <h2 class="section-title section-title--white">Have questions?</h2>
+            <p class="contact__call">Contact us for answers!</p>
+          </div>
+
+          <a class="button button--transparent" href="#"
+            >CONTACT US HERE AND NOW</a
+          >
         </div>
       </section>
 
