--- a/index.html
+++ b/index.html
@@ -1386,6 +1386,80 @@
         </div>
       </section>
 
+      <!-- Our couverage  -->
+
+      <section class="couverage">
+        <div class="container">
+          <h2 class="section-title section-title--gradient">Our couverage</h2>
+          <div class="couverage__content">
+            <div class="couverage__description">
+              <p>
+                VSYS Host is anonymous hosting provider that uses only its own
+                hardware and network equipment and has its own autonomous system
+                and IP ranges as well as certified LIR status from the RIPE NCC.
+                Our infrastructure is hosted in Seattle, Kyiv, and Amsterdam,
+                all of which are Tier III data center facilities. These DCs are
+                the embodiment of a high-performance network, including several
+                uplinks and a capacity of more than 2 Tbps. <br /><br />
+                VSYS Host operates in three Tier III data centers:<br /><br />
+              </p>
+              <ul class="couverage__list">
+                <li class="couverage__item couverage__item--kyiv">
+                  <p class="couverage__name">
+                    <span
+                      class="menu-arrow menu-arrow--right menu-arrow--big"
+                    ></span
+                    >KYIV, UKRAINE
+                  </p>
+                </li>
+                <li class="couverage__item couverage__item--amsterdam">
+                  <p class="couverage__name">
+                    <span
+                      class="menu-arrow menu-arrow--right menu-arrow--big"
+                    ></span
+                    >AMSTERDAM, THE NETHERLANDS
+                  </p>
+                </li>
+                <li class="couverage__item couverage__item--seattle">
+                  <p class="couverage__name">
+                    <span
+                      class="menu-arrow menu-arrow--right menu-arrow--big"
+                    ></span
+                    >SEATTLE, THE USA
+                  </p>
+                </li>
+              </ul>
+            </div>
+            <div class="couverage__map">
+              <img class="couverage__svg" src="./images/map.svg" alt="Map" />
+              <svg
+                class="couverage__marker couverage__marker--kyiv"
+                width="30px"
+                height="40px"
+              >
+                <use href="./images/sprite.svg#map-marker"></use>
+              </svg>
+
+              <svg
+                class="couverage__marker couverage__marker--amsterdam"
+                width="30px"
+                height="40px"
+              >
+                <use href="./images/sprite.svg#map-marker"></use>
+              </svg>
+
+              <svg
+                class="couverage__marker couverage__marker--seattle"
+                width="30px"
+                height="40px"
+              >
+                <use href="./images/sprite.svg#map-marker"></use>
+              </svg>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Payment methods -->
 
       <section class="payment">
